# nwt-analysis

./: .gitignore  README.md  REPRODUCTIONS.md  pyproject.toml  requirements-engine.txt
.github/workflows/: ci.yml  publish-pypi.yml
src/nwt_analysis/: __init__.py  cli.py
src/nwt_analysis/paper06_form_factor/: paper6_figures.py
src/nwt_analysis/paper07_knot_invariants/: nwt_charge_from_framing.py  nwt_jones_polynomial.py  nwt_surgery_network.py
src/nwt_analysis/paper08_ewk_couplings/: nwt_crossing_geometry.py  nwt_ewk_boson_scan.py  nwt_hopf_component_analysis.py  nwt_knot_eigensolver_v3.py  nwt_reidemeister_couplings.py
src/nwt_analysis/paper09_lepton_observables/: nwt_g_minus_2.py  nwt_gpe_knots_3d.py  nwt_pmns_3d.py
src/nwt_analysis/paper13_spectrum/: nwt_sensitivity_analysis.py
src/nwt_analysis/paper17_qec/: nwt_qec_KN_generalization.py  nwt_qec_bit_quantum_from_bremermann.py  nwt_qec_bracket_test.py  nwt_qec_entanglement_structure.py  nwt_qec_forward_prediction.py  nwt_qec_heron_zne.py  nwt_qec_interpretation_b_test.py  nwt_qec_proportionality_constant.py  nwt_qec_psl27_edge_transitivity.py  nwt_qec_route_a_so7_lift.py  nwt_spin7_fusion_compute.py  nwt_truncation_channel_mixing.py  nwt_truncation_mechanism.py  nwt_truncation_qdef.py
src/nwt_analysis/paper18_gravity/: nwt_paper18_G1_setup.py  nwt_paper18_G2_matter_loop.py  nwt_paper18_G3_K7_sakharov.py  nwt_paper18_G4_linearized_einstein.py  nwt_paper18_G5_curved_sakharov.py  nwt_paper18_G6_einstein_variation.py
src/nwt_analysis/paper19_substrate_figures/: nwt_multiview_demo.py  nwt_muon_decay_heron_demo.py  nwt_paper19_V1_vacuum_energy.py  nwt_paper19_V2_condensate_scale.py  nwt_paper19_V4_bit_creation.py  nwt_paper19_W12_holographic_K7.py  nwt_paper19_W3_2_fcc_phonons.py  nwt_paper19_W3_2b_k7_internal.py  nwt_paper19_W3_2c2_floppy_structure.py  nwt_paper19_W3_2c3_gauge_field.py  nwt_paper19_W3_2c_central_force.py  nwt_paper19_W3_2d_two_parameter.py  nwt_paper19_W3_3_gluing_scan.py  nwt_paper19_W3_3b_edge_gluing.py  nwt_paper19_W3_3c_psl27.py  nwt_paper19_W3_3d_S4_decomp.py  nwt_paper19_W3_3e_eg_matter_coupling.py  nwt_paper19_W3_3f_constructed_eg.py  nwt_paper19_W3_3g_D4_subdecomp.py  nwt_paper19_W3_3h_paper6_consolidation.py  nwt_paper19_W3_3i_neutrino_phase_soliton.py  nwt_paper19_W3_3j_neutrino_NLO_NNLO.py  nwt_paper19_W3_3k_PMNS_from_K8.py  nwt_paper19_W3_4_lorentz_alpha.py  nwt_paper19_W3_phonon_dispersion.py  paper18_torus_unification.py  paper19_fig_qed_compton.py  paper19_substrate_figures.py
src/nwt_analysis/paper20_neutrinos/: g2_z3_subgroups.py  k7_L3_full_second_order.py  k7_charged_lepton_U_ell.py  k7_delta_CP_topological.py  k7_orbit_wilson_seesaw.py  k7_pmns_mass_hierarchy_test.py  k7_pmns_nlo_corrections.py  k7_pmns_nlo_derivation.py  k7_seesaw_gauge_invariance.py  k7_sterile_neutrino_phenomenology.py  k7_triality_absolute_sterile_masses.py  k7_triality_delta_CP.py  k7_triality_seesaw_verification.py  k8_extension_orbit_decomposition.py
src/nwt_analysis/paper21_boson_rep/: exp12_phase1_simulator_pilot.py  exp12_phase2_destructive.py  exp12_phase2_hardware.py  exp12_scrambled_mapping_control.py  exp15_cross_sector_equivalence.py  exp28_phase28e_braket.py  k7_sector_rule_lookelsewhere.py  nwt_assignment_degeneracy.py  nwt_complete_spectrum_paper13.py
src/nwt_analysis/paper22_baryogenesis/: baryon_asymmetry_memo.md  cosmogenesis_M_Pl_anchor_inheritance.py  cosmogenesis_agn_rate_density_v2.py  cosmogenesis_alpha_KL_radius_phaseB.py  eta_B_menu_density.py  nhek_setup.py  nwt_baryogenesis_chirality.py
src/nwt_analysis/supporting/: __init__.py  nwt_2T_8dim_explicit_b2_8.py  nwt_2T_8dim_lambda2_b2_6.py  nwt_2T_character_7dim_b2_4.py  nwt_2T_fusion_21channels_b2_4.py  nwt_2T_in_2I_check_b2_3a.py  nwt_2T_spin7_clifford_b2_12.py  nwt_2T_spin7_full_b2_10.py  nwt_2T_spin7_normalizer_b2_11.py  nwt_2T_spin7_search_b2_9.py  nwt_87_prefactor_b2_14.py  nwt_alpha_ladder.py  nwt_beta_decay_landauer.py  nwt_compressibility_scalar_b2_2.py  nwt_conservation_laws.py  nwt_crossing_phase.py  nwt_emergent_c.py  nwt_emergent_yang_mills.py  nwt_eulerian_amplitude_b2_7.py  nwt_ewk_decay_check.py  nwt_fano_crossings_b2_1c.py  nwt_gravity_structure_b2_1.py  nwt_hyperon_landauer_survey.py  nwt_k7_so7_wilson_b2_13.py  nwt_knot_eigensolver.py  nwt_knot_eigensolver_v2.py  nwt_lagrangian_L1_fields.py  nwt_lagrangian_L1b_uv_completion.py  nwt_lagrangian_L2_kinetic_bps.py  nwt_lagrangian_L3_skyrme_hopf.py  nwt_lagrangian_L4_paper6_mass_spectrum.py  nwt_lagrangian_L5_gravity_hierarchy.py  nwt_lifetime_geometry.py  nwt_mass_from_abelian_higgs.py  nwt_multimode_carrier_scan.py  nwt_neutrino_2sqrtalpha_origin.py  nwt_neutrino_alpha6_decomposition.py  nwt_neutrino_hierarchy_ladder.py  nwt_neutrino_mass_seesaw.py  nwt_nlo_alpha7_b2_15.py  (+43 more)
tests/: test_reproductions.py
