[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nwt-analysis"
version = "0.1.0"
description = "Reproduction code for the Null Worldtube Theory papers: per-paper analysis drivers that compute each paper's published figures and numbers on top of nwt-substrate and jax-solitons."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "James P. Galasyn" },
  { name = "Claude Théodore" },
]
keywords = [
  "null-worldtube", "topological-physics", "reproduction",
  "knot-theory", "neutrinos", "quantum-error-correction",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Physics",
]
# Core deps are what the reproduction drivers actually import. Kept PyPI-safe
# (no direct URLs). The heavier upstreams (nwt-substrate, jax-solitons) are an
# OPTIONAL extra below because they are not on PyPI yet — same pattern
# jax-solitons uses for its nwt-substrate oracle dep.
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
# The NWT field-theory upstreams, as PyPI-legal version specifiers (PyPI forbids
# direct-reference git URLs in published metadata). They are not on PyPI yet —
# until they are, install them from git via `requirements-engine.txt` (DOI-pinned
# tags). Drivers that need them import lazily, so the core installs without these.
# Compatible-range pins, NOT floors: jax-solitons is pre-alpha 0.0.x and
# "changes API without notice until 0.1", so a bare floor would let a breaking
# engine release silently break `pip install nwt-analysis[engine]` for someone
# who never touched the engine directly. Bump intentionally when re-validating
# against a newer upstream. Exact per-paper provenance lives in
# requirements-engine.txt / REPRODUCTIONS.md (the audit trail for paper claims).
engine = [
  "nwt-substrate>=0.5,<0.6",
  "jax-solitons>=0.0.2,<0.0.3",
]
test = [
  "pytest>=8",
]

[project.scripts]
# One dispatcher rather than 56 console scripts. `nwt-repro list` enumerates the
# reproductions; `nwt-repro run <key> -- ...` runs one.
nwt-repro = "nwt_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nwt_analysis"]

# Only collect the curated test suite. The reproduction drivers contain their own
# functions named test_* (paper-internal checks, not pytest cases) which must not
# be auto-collected.
[tool.pytest.ini_options]
testpaths = ["tests"]
